--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,30 +1,18 @@
 spring:
-  application:
-    name: demo.logging
   datasource:
-    url: jdbc:postgresql://localhost:5432/learn
+    url: jdbc:postgresql://postgres:5432/learn
     username: admin
     password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
-    show-sql: true
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-
-  cache:
-    type: redis
+    show-sql: true
     redis:
-      host: localhost
+      host: redis
       port: 6379
-      timeout: 1000
-      lettuce:
-        pool:
-          max-active: 8
-          max-wait: -1
-          min-idle: 0
-          max-idle: 8
-server:
-  port: 9292
+
+logging:
+  level:
+    root: INFO
+    com.tapiwa.demo: DEBUG
